tests/e2e/complex_nested_expression8.story
(1 + 2) == (0 - -3) and -4 - (-5 + -6)
